[gd_scene load_steps=4 format=3 uid="uid://cubm8ayprtkdv"]

[ext_resource type="Script" path="res://Scripts/CoreScripts/game.gd" id="1_ntdck"]
[ext_resource type="PackedScene" uid="uid://bwrhsav1b6hkf" path="res://Scenes/CoreScenes/settings.tscn" id="2_tpptn"]
[ext_resource type="PackedScene" uid="uid://gn5lpiu32ncn" path="res://Scenes/Map/level_1.tscn" id="5_87bru"]

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ntdck")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMargin" type="MarginContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="PauseBtn" type="Button" parent="CanvasLayer/PauseMargin"]
layout_mode = 2
text = "Pause
"

[node name="MenuContainer" type="VBoxContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="EndMsg" type="Label" parent="CanvasLayer/MenuContainer"]
visible = false
layout_mode = 2
text = "Wut"

[node name="SettingBtn" type="Button" parent="CanvasLayer/MenuContainer"]
layout_mode = 2
text = "Settings
"

[node name="ResumeBtn" type="Button" parent="CanvasLayer/MenuContainer"]
layout_mode = 2
text = "Resume"

[node name="RetryBtn" type="Button" parent="CanvasLayer/MenuContainer"]
layout_mode = 2
text = "Retry"

[node name="QuitBtn" type="Button" parent="CanvasLayer/MenuContainer"]
layout_mode = 2
text = "Quit"

[node name="Settings" parent="CanvasLayer" instance=ExtResource("2_tpptn")]
visible = false
offset_left = 266.0
offset_top = 204.0
offset_right = -239.0
offset_bottom = -105.0

[node name="ZombieContainer" type="Node2D" parent="."]

[node name="Level1" parent="." instance=ExtResource("5_87bru")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(416, 308)

[connection signal="pressed" from="CanvasLayer/PauseMargin/PauseBtn" to="." method="_on_pause_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuContainer/SettingBtn" to="." method="_on_setting_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuContainer/RetryBtn" to="." method="_on_retry_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="exit_settings" from="CanvasLayer/Settings" to="." method="_on_settings_exit_settings"]
[connection signal="player_death" from="Level1" to="." method="_on_level_1_player_death"]
